--- a/exercise-one/style.css
+++ b/exercise-one/style.css
@@ -3,6 +3,5 @@
     height: 300px;
     width: 300px;
     background-color: salmon;
-    border-top-right-radius: 50%;
-    border-bottom-left-radius: 50%;
+    border-radius: 0 50% 0 25%;
 }
