--- a/exercise-three/style.css
+++ b/exercise-three/style.css
@@ -8,7 +8,7 @@ body
 {
     height: 300px;
     width: 300px;
-    background-color: rgba(255,102,0,0.25);
+    background-color: hsla(24,100%,68%,1);
     position: relative;
 }
 
