--- a/exercise-four/style.css
+++ b/exercise-four/style.css
@@ -4,5 +4,12 @@
     height: 300px;
     background-color: lime;
     margin: 20px 0 0 20px;
-    box-shadow: 5px 5px 5px rgba(0,0,0,.75);
+    box-shadow: 0px 20px 5px -8px rgba(0,0,0,.75);
+    transition: .3s;
+}
+
+.the-box:hover
+{
+    margin: 10px 0 0 20px;
+    box-shadow: 0px 40px 5px -8px rgba(0,0,0,.25);
 }
