--- a/exercise-four/style.css
+++ b/exercise-four/style.css
@@ -4,7 +4,8 @@
     height: 300px;
     background-color: lime;
     margin: 20px 0 0 20px;
-    box-shadow: inset 0px 0px 15px rgba(0,0,0,.75);
+    box-shadow: inset 0px 0px 15px rgba(0,0,0,.75),
+                0px 20px 5px -8px rgba(0,0,0,.75);
     transition: .3s;
 }
 
