--- a/exercise-five/style.css
+++ b/exercise-five/style.css
@@ -6,3 +6,14 @@
                  25px 10px 0px limegreen,
                  35px 15px 0px greenyellow;
 }
+
+.title-new
+{
+    font-size: 100px;
+    margin: 25px;
+    background-color: #eaeaea;
+    color: #efefef;
+    display: inline-block;
+    padding: 20px;
+    text-shadow: 0px 0px 1px rgba(0,0,0,.75);
+}
