--- a/exercise-five/style.css
+++ b/exercise-five/style.css
@@ -17,3 +17,16 @@
     padding: 20px;
     text-shadow: 0px 0px 1px rgba(0,0,0,.75);
 }
+
+.title-new-new
+{
+    font-size: 100px;
+    margin: 50px auto;
+    display: block;
+    width: 50%;
+    background-color: #030303;
+    text-align: center;
+    padding: 10px;
+    color: #030303;
+    text-shadow: 0px 0px 5px green;
+}
