--- a/exercise-six/style.css
+++ b/exercise-six/style.css
@@ -3,5 +3,5 @@
     width: 600px;
     height: 300px;
     margin: 50px auto;
-    background-image: linear-gradient(-90deg, salmon, limegreen, lightskyblue, lightgray);
+    background-image: linear-gradient(to left bottom, salmon, limegreen, lightskyblue, lightgray);
 }
