--- a/exercise-fusion-one-to-twelve/style.css
+++ b/exercise-fusion-one-to-twelve/style.css
@@ -11,6 +11,8 @@ body
     font-size: 16px;
 }
 
+/* First Section */
+
 .first-section
 {
     width: 50%;
@@ -77,4 +79,74 @@ body
 .fiftypercent-radius
 {
     border-radius: 50%;
+}
+
+/* Second Section */
+.second-section
+{
+    width: 50%;
+    margin: 100px auto;
+    background-color: lightgray;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.second-section .second-section-title
+{
+    text-align: center;
+    color: #030303;
+}
+
+.second-section .outer-boxes
+{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 100px auto;
+    background-color: salmon;
+    opacity: 1;
+}
+
+.second-section .inner-boxes
+{
+    width: 100px;
+    height: 100px;
+    background-color: maroon;
+    opacity: 0.5;
+    position: absolute;
+    top: -20px;
+    left: -80px;
+}
+
+.second-section .box-of-the-depth
+{
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    opacity: 0.25;
+    position: absolute;
+    bottom: -20px;
+    right: -20px;
+}
+
+.second-section .new-inner-boxes
+{
+    width: 100px;
+    height: 100px;
+    background-color: silver;
+    opacity: 0.5;
+    position: absolute;
+    bottom: -50px;
+    right: -50px;
+}
+
+.second-section .box-of-the-new-depth
+{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    opacity: .25;
+    position: absolute;
+    top: -25px;
+    right: -25px;
 }
