--- a/exercise-lightbox/css/style.css
+++ b/exercise-lightbox/css/style.css
@@ -114,3 +114,25 @@ h1
     box-shadow: 1px 1px 5px 5px rgba(255,255,255,.5);
     height: 100%;
 }
+
+.overlay:target img
+{
+    animation: zoomAndFade 1s ease 1 normal forwards;
+}
+
+/* Animation */
+
+@keyframes zoomAndFade
+{
+    0%
+    {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100%
+    {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
